maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:17: error: not found: value prendreBiscuit
prendreBiscuit
^