maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    // Your code here 
var x = 0
while (getX != 3 || getY != 3)
{x = random3()
x match
{case 0 => avance()
case 1 => droite()
case 2 => gauche()



}

}
prendreBiscuit



    
}
